title pages modified

--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -7,26 +7,26 @@
 % THIS HAS CONSEQUENCES FOR THE PACKAGES USED AS WELL, pstricks CANNOT BE USED WITH PDFLATEX
 %
 % fill the following with relevant information
-\mscDepartment{Design, Integration and Operations of Aircraft and Rotorcraft}%
+\mscDepartment{Aerodynamics and Wind Energy}%
 \mscFaculty{Aerospace Engineering}%
-\mscName{M.Y.N. Ame B.Sc.}%
-\mscDate{My Graduation Date}%
-\mscTitle{The Main Title Of the Thesis}%
-\mscSubTitle{A Subtitle to Enlighten the Reader}% can be left empty
-\mscKeyWords{a whole bunch of keywords,separated,by,commas}%
+\mscName{L. Manickathan B.Sc.}%
+\mscDate{01.12.2013}%
+\mscTitle{Hybrid Vortex Method for 2D Vertical-Axis Wind Turbine}%
+\mscSubTitle{A fast and accurate Eulerian-Lagrangian numerical method in python}% can be left empty
+\mscKeyWords{Hybrid Vortex Method, Python}%
 %
 % background picture for the first page, make sure it is in the correct format (eps or something else)
-\ifpdf
-  \mscBackPicture{./figs/merlin_landing_3_pdf}    % eps of 21 * 29.7 cm
-\else
-  \mscBackPicture{./figs/merlin_landing_3}    % pdf version of the cover background
-\fi
+%\ifpdf
+%  \mscBackPicture{./figs/merlin_landing_3_pdf}    % eps of 21 * 29.7 cm
+%\else
+%  \mscBackPicture{./figs/merlin_landing_3}    % pdf version of the cover background
+%\fi
 %
 % readers page (un)comment as necessary
-\mscReaderOne{prof.dr.ir. P.R. Of}
-\mscReaderTwo{dr.ir. D.A.I. Ly Supervisor}
-\mscReaderThree{ir. G.U. Est}
-\mscReaderFour{ir. Reader Four}
+\mscReaderOne{prof.dr.ir. G.J.W. van Bussel}
+\mscReaderTwo{dr.ir. C.J. Simao Ferreira}
+\mscReaderThree{dr.ir. A. Palha da Silva Clerigo}
+\mscReaderFour{prof.dr.ir. I. Bennett}
 % \mscReaderFive{ir. Reader Five}
 % \mscReaderSix{ir. Reader Six}
 %
