added a yes trail stuff

--- a/help_chap_introduction.tex
+++ b/help_chap_introduction.tex
@@ -4,7 +4,7 @@
         %
         RTFM\footnote{Read The Fabulous Manual ;-)}: \href{http://www.ctan.org/tex-archive/info/lshort/english/lshort.pdf}{The Not So Short Introduction to \LaTeXe}.
         %
-        Chapters 1, 2 and 3 are a must.
+        Chapters 1, 2 and 3 are a must yes..
         
         And you directly see why \LaTeX~is so much easier than Word, external references actually work.
         %
