--- a/thesis.tex
+++ b/thesis.tex
@@ -161,6 +161,7 @@
     % and some appendices here
     \appendix%
     %\include{appendix/mathModel}%
+    \include{appendix/cascade}
 
 \backmatter%
 
