working on diffusion for vortex method

--- a/thesis.tex
+++ b/thesis.tex
@@ -60,9 +60,11 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 %\usepackage{hyperref}
 %\usepackage{graphicx}
-%\usepackage{caption}
+
 %\usepackage{color}
 %\usepackage{python}
 
@@ -83,6 +85,7 @@
 \newcommand{\matlab}{\textsc{Matlab} }
 \newcommand{\python}{\textsc{Python} }
 %
+
 %\newcommand{\printAbbreviation}[3]{#1 (\textcolor{darkblue}{#2}) \nomenclature[#3]{#2}{#1}}
 \makenomenclature
 
