figures added. working on boundary conditions

--- a/thesis.tex
+++ b/thesis.tex
@@ -147,13 +147,13 @@
   	\include{chapters/lagrangian}
 
 	% Chapter 3: Eulerian Domain: Finite Element Method
-	%\include{chapters/eulerian}
+	\include{chapters/eulerian}
 
     % Chapter 4: Hybrid Eulerian-Lagrangian Vortex Particle Method
-   	%\include{chapters/hybrid}
+   	\include{chapters/hybrid}
 
    	% Chapter 5: Validation of Hybrid Method
-	%\include{chapters/validation}   
+	\include{chapters/validation}   
 
    	% Chapter 6: Conclusion and Recommendations
    	\include{chapters/conclusion}
