lagrangian chapter finished. WIP: Eulerian chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -108,7 +108,7 @@
 %
 % Custom commands
 % print todo
-\newcommand{\todo}[1]{\textcolor{red}{\centerline{!!! #1 !!!}}}
+\newcommand{\todo}[1]{\textcolor{red}{{!!! #1 !!!}}}
 % Print and index acronyms
 \newcommand{\printAcron}[2]{#1 ({\color{darkblue}{#2}})\acron[f]{#2}{#1}}
 
