--- a/thesis.tex
+++ b/thesis.tex
@@ -110,7 +110,8 @@
 % print todo
 \newcommand{\todo}[1]{\textcolor{red}{{!!! #1 !!!}}}
 % Print and index acronyms
-\newcommand{\printAcron}[2]{#1 ({\color{darkblue}{#2}})\acron[f]{#2}{#1}}
+\newcommand{\indexAcron}[2]{#1 ({\color{darkblue}{#2}})\acron[f]{#2}{#1}}
+\newcommand{\printAcron}[2]{#1 ({\color{darkblue}{#2}})}
 
 % short-hand notations for cosine, sine and tangent with calligraphic C, S and T
 \newcommand{\cc}[1]{\:\mathcal{C}_{#1}}%
