WIP: dolfin, GMSH description

--- a/thesis.tex
+++ b/thesis.tex
@@ -67,6 +67,10 @@
 \usepackage{ctable}
 \usepackage{booktabs}
 \usepackage{siunitx} % use SI unit
+\usepackage{listing}
+\usepackage{minted}
+
+
 
 % Flowchart definition
 \usetikzlibrary{calc,trees,positioning,arrows,chains,shapes.geometric,%
