WIP: eulerian validation

--- a/thesis.tex
+++ b/thesis.tex
@@ -122,10 +122,12 @@
 \newcommand{\cs}[1]{\:\mathcal{S}_{#1}}%
 \newcommand{\ct}[1]{\:\mathcal{T}_{#1}}%
 %
-% matlab in small caps
+% Product names in small caps
 \newcommand{\matlab}{\textsc{Matlab} }
 \newcommand{\python}{\textsc{Python} }
-%
+\newcommand{\fenics}{\textsc{FEniCS} }
+\newcommand{\dolfin}{\textsc{Dolfin} }
+\newcommand{\gmsh}{\textsc{Gmsh} }
 
 %\newcommand{\printAbbreviation}[3]{#1 (\textcolor{darkblue}{#2}) \nomenclature[#3]{#2}{#1}}
 \makenomenclature
