introduction. proof read

--- a/thesis.tex
+++ b/thesis.tex
@@ -202,7 +202,7 @@
    	\include{chapters/conclusion}
     
     % Bibliography
-    \printbib{bibliography/library}%
+    \printbib{bibliography/library,bibliography/others}
     
     % and some appendices here
     \appendix%
