bibliography style changed to acm. etter design.

--- a/thesis.tex
+++ b/thesis.tex
@@ -44,9 +44,14 @@
 %
 % If you prefer references as numbers, comment the following line and uncomment the one thereafter
 %\bibliographystyle{./local/apacite/apacite}%
-\bibliographystyle{plain}
-%
-%
+%\bibliographystyle{plain}
+%\bibliographystyle{abbrv}
+%\bibliographystyle{siam}
+%\bibliographystyle{apalike}
+
+% Better bibliography styles
+\bibliographystyle{acm}
+
 % use package breakurl to break url in sensible places (such as in www references)
 % if it is not available in your latex distribution, use the local one
 %\usepackage[preserveurlmacro]{./local/breakurl/breakurl}
