lagrangian text correction done. Reference and figures WIP

--- a/bibliography/others.bib
+++ b/bibliography/others.bib
@@ -16,3 +16,17 @@ Additional resources
   urldate = {2014-05-21}
 }
 
+
+@ARTICLE{Tutty2010a,
+   author = {{Tutty}, O.~R.},
+    title = "{A Simple Redistribution Vortex Method (with Accurate Body Forces)}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1009.0166},
+ primaryClass = "physics.flu-dyn",
+ keywords = {Physics - Fluid Dynamics, Physics - Computational Physics},
+     year = 2010,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2010arXiv1009.0166T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
