--- a/bibliography/others.bib
+++ b/bibliography/others.bib
@@ -30,3 +30,29 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2010arXiv1009.0166T},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{Ciarlet1972b,
+author = {Ciarlet, P G and Raviart, P A},
+doi = {10.1007/BF00252458},
+issn = {0003-9527},
+journal = {Archive for Rational Mechanics and Analysis},
+language = {English},
+number = {3},
+pages = {177--199},
+publisher = {Springer-Verlag},
+title = {{General Lagrange and Hermite interpolation in} $\mathbf{R}^n$ {with applications to finite element methods}},
+url = {http://dx.doi.org/10.1007/BF00252458},
+volume = {46},
+year = {1972}
+}
+
+@book{Logg2012b,
+author = {Logg, Anders and Mardal, K.-A and Wells, Garth N and others},
+file = {:home/lento/Documents/Mendeley Desktop//Logg, Mardal, Wells - 2012 - Automated solution of differential equations by the finite element method The fenics book.pdf:pdf},
+isbn = {3642230997},
+publisher = {Springer},
+title = {{Automated Solution of Differential Equations by the Finite Element Method}},
+url = {http://books.google.com/books?hl=en\&lr=\&id=ASWN\_VRr1NQC\&oi=fnd\&pg=PR3\&dq=Automated+Solution+of+Differential+Equations+by+the+Finite+Element+Method\&ots=FWcVnJClW3\&sig=EimCEVvmSxYafc5h6AH5z834nE8},
+volume = {84},
+year = {2012}
+}
