working on clercx-bruneu dipole

--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \mscReaderOne{prof.dr.ir. G.J.W. van Bussel}
 \mscReaderTwo{dr.ir. C.J. Simao Ferreira}
 \mscReaderThree{dr.ir. A. Palha da Silva Clerigo}
-\mscReaderFour{prof.dr.ir. I. Bennett}
+%\mscReaderFour{prof.dr.ir. I. Bennett}
 % \mscReaderFive{ir. Reader Five}
 % \mscReaderSix{ir. Reader Six}
 %
