WIP: eulerian - ISC

--- a/thesis.tex
+++ b/thesis.tex
@@ -10,7 +10,7 @@
 \mscDepartment{Aerodynamics and Wind Energy}%
 \mscFaculty{Aerospace Engineering}%
 \mscName{L. Manickathan B.Sc.}%
-\mscDate{Date TBD}%
+\mscDate{Date TBD}%s
 \mscTitle{Hybrid Eulerian-Lagrangian Vortex Particle Method}%
 \mscSubTitle{A fast and accurate numerical method for 2D Vertical-Axis Wind Turbine}% can be left empty
 \mscKeyWords{Hybrid Vortex Method, Eulerian, Lagrangian, Python, FEniCS, GMSH, Navier-Stokes, CFD, Coupling, Finite Element, Vortex Blobs}%
@@ -74,6 +74,7 @@
 \usepackage{siunitx} % use SI unit
 \usepackage{listing}
 \usepackage{minted}
+\usepackage{multirow}
 
 
 
