WIP: hybrid corrections

--- a/thesis.tex
+++ b/thesis.tex
@@ -69,12 +69,13 @@
 \usepackage{subcaption} % multiple figures
 \usepackage{tikz} % flowchart
 %\usepackage{longtable}
-\usepackage{ctable}
-\usepackage{booktabs}
+\usepackage{ctable} % better tables
+\usepackage{booktabs} %
 \usepackage{siunitx} % use SI unit
-\usepackage{listing}
-\usepackage{minted}
+\usepackage{listing} % 
+\usepackage{minted} % for source codes
 \usepackage{multirow}
+\usepackage[section]{placeins} % put barriers for the floats
 
 
 
