hybrid. first draft done. WIP: corrections

--- a/bibliography/others.bib
+++ b/bibliography/others.bib
@@ -56,3 +56,36 @@ url = {http://books.google.com/books?hl=en\&lr=\&id=ASWN\_VRr1NQC\&oi=fnd\&pg=PR
 volume = {84},
 year = {2012}
 }
+
+@misc{fenicstools,
+  author = {Mortensen, Mikael},
+  title = {Fenicstools},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/mikaem/fenicstools}},
+  commit = {89642d5ce873f3f5b6593562235b333a3f488603}
+}
+
+
+@Article{Hunter:2007,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  year      = 2007
+}
+
+@misc{franklin2006pnpoly,
+  title={Pnpoly-point inclusion in polygon test},
+  author={Franklin, W Randolph},
+  howpublished={\url{http://www.ecse.rpi.edu/Homepages/wrf/Research/Short\_Notes/pnpoly.html}},
+  year={2006}
+}
