--- a/thesis.tex
+++ b/thesis.tex
@@ -77,6 +77,7 @@
 \usepackage{multirow}
 \usepackage[section]{placeins} % put barriers for the floats
 \usepackage{longtable}
+\usepackage{comment}
 %\usepackage{appendix}
 
 
