--- a/thesis.tex
+++ b/thesis.tex
@@ -202,18 +202,18 @@
 	%\include{chapters/application}
 	
     % Chapter 1: Introduction
-    \include{chapters/introduction}%
+%    \include{chapters/introduction}%
 
     % Chapter 2 : Lagrangian Domain: Vortex Particle Method
-  	\include{chapters/lagrangian}
+%  	\include{chapters/lagrangian}
 
 	% Chapter 3: Eulerian Domain: Finite Element Method
-	\include{chapters/eulerian}
+%	\include{chapters/eulerian}
 
     % Chapter 4: Hybrid Eulerian-Lagrangian Vortex Particle Method
-   	\include{chapters/hybrid}
+%   	\include{chapters/hybrid}
    	
-   	\include{chapter/phyflow}
+%   	\include{chapter/phyflow}
 
    	% Chapter 5: Validation of Hybrid Method
 	\include{chapters/validation}   
