--- a/bibliography/others.bib
+++ b/bibliography/others.bib
@@ -129,3 +129,9 @@ year = {2012}
   year={2013},
   publisher={O'Reilly Media}
 }
+
+@misc{CGAL,
+  key   = "CGAL",
+  title = "\textsc{Cgal}, {C}omputational {G}eometry {A}lgorithms {L}ibrary",
+  note  = "http://www.cgal.org"
+}
