--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-%\documentclass[draft]{src/dutmsc}%
-\documentclass{src/dutmsc}%
+\documentclass[draft]{src/dutmsc}%
+%\documentclass{src/dutmsc}%
 %
 % STARTING FROM VERSION 1.0.8, DIRECT PDF OUTPUT FROM THE LATEX SOURCE IS SUPPORTED.
 % IF YOU WANT TO USE THIS FEATURE, MAKE SURE ALL YOUR OWN FIGURES ARE IN A FORMAT
@@ -81,7 +81,7 @@
 %\usepackage{appendix}
 \usepackage{flipbook}
 \usepackage{ifthen}
-
+\usepackage{enumitem}
 
 % Flowchart definition
 \usetikzlibrary{calc,trees,positioning,arrows,chains,shapes.geometric,%
@@ -231,7 +231,7 @@
 	\include{chapters/validation}   
 
 %   	% Chapter 8: Conclusion and Recommendations
-%   \include{chapters/conclusion}
+   \include{chapters/conclusion}
     
     % Bibliography
     \printbib{bibliography/library,bibliography/others}
@@ -239,7 +239,7 @@
     % and some appendices here
     %\addcontentsline{toc}{chapter}{Appendix}
     \appendix  
-    \include{appendix/coordinateSystem}%
+%    \include{appendix/coordinateSystem}%
     \include{appendix/pHyFlow_codeStructure}%
     	
 %    \appendix  
