--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-\documentclass[draft]{src/dutmsc}%
-%\documentclass{src/dutmsc}%
+%\documentclass[draft]{src/dutmsc}%
+\documentclass{src/dutmsc}
 %
 % STARTING FROM VERSION 1.0.8, DIRECT PDF OUTPUT FROM THE LATEX SOURCE IS SUPPORTED.
 % IF YOU WANT TO USE THIS FEATURE, MAKE SURE ALL YOUR OWN FIGURES ARE IN A FORMAT
@@ -79,8 +79,8 @@
 \usepackage{longtable}
 \usepackage{comment}
 %\usepackage{appendix}
-\usepackage{flipbook}
-\usepackage{ifthen}
+%\usepackage{flipbook}
+%\usepackage{ifthen}
 \usepackage{enumitem}
 
 % Flowchart definition
@@ -116,11 +116,105 @@
   tubnode/.style={midway, right=2pt},
 }
 
+\tikzset{
+>=stealth',
+  punktchainN/.style={
+    rectangle, 
+    %rounded corners, 
+    fill=black!5,
+    %draw=black, % very thick,
+    text width=15em, 
+    minimum height=3em, 
+    text centered, 
+    on chain},
+  line/.style={draw, thick, <-},
+  element/.style={
+    tape,
+    top color=white,
+    bottom color=blue!50!black!60!,
+    minimum width=8em,
+    draw=blue!40!black!90, very thick,
+    text width=10em, 
+    minimum height=3.5em, 
+    text centered, 
+    on chain},
+  every join/.style={->, thick,shorten >=1pt},
+  decoration={brace},
+  tuborg/.style={decorate},
+  tubnode/.style={midway, right=2pt},
+}
+
+\tikzset{
+>=stealth',
+  punktchainO/.style={
+    rectangle, 
+    dashed,
+    %rounded corners, 
+    %fill=black!10,
+    draw=black!80, % very thick,
+    text=black!80,
+    text width=15em, 
+    minimum height=3em, 
+    text centered, 
+    on chain},
+  %line/.style={draw, thick, <-},
+  element/.style={
+    tape,
+    top color=white,
+    bottom color=blue!50!black!60!,
+    minimum width=8em,
+    draw=blue!40!black!90, very thick,
+    text width=10em, 
+    minimum height=3.5em, 
+    text centered, 
+    on chain},
+  every join/.style={->, thick,shorten >=1pt},
+  decoration={brace},
+  tuborg/.style={decorate},
+  tubnode/.style={midway, right=2pt},
+}
+
+\tikzset{
+>=stealth',
+  punktchainS/.style={
+    rectangle, 
+    draw=red,
+    %rounded corners, 
+    fill=red!30,
+    %draw=black, % very thick,
+    text width=15em, 
+    minimum height=3em, 
+    text centered, 
+    on chain},
+  %line/.style={draw, thick, <-},
+  element/.style={
+    tape,
+    top color=white,
+    bottom color=blue!50!black!60!,
+    minimum width=8em,
+    draw=blue!40!black!90, very thick,
+    text width=10em, 
+    minimum height=3.5em, 
+    text centered, 
+    on chain},
+  every join/.style={->, thick,shorten >=1pt},
+  decoration={brace},
+  tuborg/.style={decorate},
+  tubnode/.style={midway, right=2pt},
+}
+
+% Tikz stypes
+%\tikzstyle{every node}=[draw=black,thick,anchor=west]
+%\tikzstyle{optional}=[dashed,fill=gray!20]
+%\tikzstyle{selected}=[draw=red,fill=red!30]
 
 % Tikz stypes
 \tikzstyle{every node}=[draw=black,thick,anchor=west]
 \tikzstyle{optional}=[dashed,fill=gray!20]
 \tikzstyle{selected}=[draw=red,fill=red!30]
+
+\tikzstyle{line}=[draw,-latex']
+
 \tikzstyle{class}=[draw,fill=blue!20]
 \tikzstyle{module}=[draw,fill=orange!50!red!50!white]
 \tikzstyle{script}=[draw,fill=yellow!20]
@@ -148,6 +242,10 @@
 \newcommand{\fenics}{\textsc{FEniCS} }
 \newcommand{\dolfin}{\textsc{Dolfin} }
 \newcommand{\gmsh}{\textsc{Gmsh} }
+
+\setcounter{secnumdepth}{3}
+%\setcounter{tocdepth}{3}
+
 
 %\newcommand{\printAbbreviation}[3]{#1 (\textcolor{darkblue}{#2}) \nomenclature[#3]{#2}{#1}}
 \makenomenclature
@@ -187,7 +285,7 @@
     \include{chapters/acknowledgements}%
     \cleardoublepage%
     % 
-    % table of contents, list of figures and list of tables
+    % table of contents, list of figures and list of tablesn
     \tocloflot%
     %
     % Nomenclature
@@ -212,7 +310,7 @@
     \include{chapters/introduction}%
 
 	% Chapter 2: Hybrid Eulerian-Lagrangian Vortex Particle Method
-  	\include{chapters/hybrid}
+	\include{chapters/hybrid}
 
     % Chapter 3 : Lagrangian Subdomain: Vortex Particle Method
 	\include{chapters/lagrangian}
@@ -225,22 +323,27 @@
 %  	\include{chapters/hybridOld}
 %
 %	% Chapter 6: Introduction to the Hybrid Solver: pHyFlow
-   	\include{chapters/phyflow}
+ 	\include{chapters/phyflow}
 
 %  	% Chapter 7: Verification and Validation of the Hybrid Method
 	\include{chapters/validation}   
 
 %   	% Chapter 8: Conclusion and Recommendations
    \include{chapters/conclusion}
-    
+
+   %\include{chapters/afterword} 
+
     % Bibliography
-    \printbib{bibliography/library,bibliography/others}
-    
-    % and some appendices here
-    %\addcontentsline{toc}{chapter}{Appendix}
-    \appendix  
-%    \include{appendix/coordinateSystem}%
-    \include{appendix/pHyFlow_codeStructure}%
+
+ 
+     \printbib{bibliography/library,bibliography/others}
+     
+     % and some appendices here
+     %\addcontentsline{toc}{chapter}{Appendix}
+     \appendix 
+	 \include{appendix/coordinateSystem}%
+     \include{appendix/pHyFlow_codeStructure}%
+
     	
 %    \appendix  
 %    \addcontentsline{toc}{chapter}{Appendix}
@@ -254,6 +357,7 @@
 	%\input{appendices/main}
 
 \backmatter%
+
 
     % index file here (not needed for a MSc thesis)
 	%\printindex
