--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-\documentclass[draft]{src/dutmsc}%
-%\documentclass{src/dutmsc}
+%\documentclass[draft]{src/dutmsc}%
+\documentclass{src/dutmsc}
 %
 % STARTING FROM VERSION 1.0.8, DIRECT PDF OUTPUT FROM THE LATEX SOURCE IS SUPPORTED.
 % IF YOU WANT TO USE THIS FEATURE, MAKE SURE ALL YOUR OWN FIGURES ARE IN A FORMAT
@@ -298,10 +298,10 @@
 
 	% ---------------------------------------------------------
 	% Input flipcard animation
-%	\rfoot[]{\setlength{\unitlength}{1mm}
-%	\begin{picture}(0,0)
-%	\put(-10,-5){\includegraphics[scale=0.1]{./figures/style/flipbook/pic\thepage.png}}
-%	\end{picture}}
+	\rfoot[]{\setlength{\unitlength}{1mm}
+	\begin{picture}(0,0)
+	\put(-10,-5){\includegraphics[scale=0.1]{./figures/style/flipbook/pic\thepage.png}}
+	\end{picture}}
 	% ---------------------------------------------------------
 
     % Example Chapter
@@ -310,39 +310,39 @@
     \include{chapters/introduction}%
 
 	% Chapter 2: Hybrid Eulerian-Lagrangian Vortex Particle Method
-%	\include{chapters/hybrid}
+	\include{chapters/hybrid}
 
     % Chapter 3 : Lagrangian Subdomain: Vortex Particle Method
-%	\include{chapters/lagrangian}
+	\include{chapters/lagrangian}
 
 	% Chapter 4: Eulerian Subdomain: Finite Element Method
-%	\include{chapters/eulerian}
+	\include{chapters/eulerian}
 
     % Chapter 5: Coupling Eulerian and Lagrangian Method
   	\include{chapters/coupling}  	
 %  	\include{chapters/hybridOld}
 %
 %	% Chapter 6: Introduction to the Hybrid Solver: pHyFlow
-% 	\include{chapters/phyflow}
+ 	\include{chapters/phyflow}
 
 %  	% Chapter 7: Verification and Validation of the Hybrid Method
-%	\include{chapters/validation}   
+	\include{chapters/validation}   
 
 %   	% Chapter 8: Conclusion and Recommendations
-%   \include{chapters/conclusion}
+   \include{chapters/conclusion}
 
-   %\include{chapters/afterword} 
+   \include{chapters/afterword} 
 
     % Bibliography
 
- 
-     \printbib{bibliography/library,bibliography/others}
-     
-     % and some appendices here
-     %\addcontentsline{toc}{chapter}{Appendix}
-     \appendix 
-	 \include{appendix/coordinateSystem}%
-     \include{appendix/pHyFlow_codeStructure}%
+	
+	 \printbib{bibliography/library,bibliography/others}
+	 
+	 % and some appendices here
+	 %\addcontentsline{toc}{chapter}{Appendix}
+	 \appendix 
+	\include{appendix/coordinateSystem}%
+	 \include{appendix/pHyFlow_codeStructure}%
 
     	
 %    \appendix  
